--- a/index.Rmd
+++ b/index.Rmd
@@ -233,15 +233,14 @@ ggpairs(salary_tuition,columnLabels = c("Tuition", "Initial Pay", "Mid Pay","Imp
 
 ```
 
+To find out if there is any relation between tuition and career growth, we first joined the tuition and the salary datasets with the help of universitiy names. Then we have produced a matrix scatter plot using the ggpairs function of GGALLY package.
 
+A matrix scatter plot is a powerful tool for visualising the correlation between various variables in a dataset. As can be seen from figure \@ref(fig:tiplot) apart from the Impact variable, which is a percentage provided by students who think they are making the world a better place all the other variables show a positive correlation amongst each other. This suggests that paying a higher tuition fee does mean that a greater initial salary, mid career salary can be expected by the students. Another intersting point to note is that the presence of STEM students escalates the possibility of getting a better initial and mid career pay. STEM is an acronym for science, technology, engineering and maths. Having STEM courses in a university boosts the prospects of the university and thus the students. 
 
+There are also some values which are contradictory to the correlation. These can be found by hovering over the plot as the plot has been made interactive using the plotly package in R. 
 
-Tuition and pay has positive correlation 
+One such observation is where the initial pay is 81k, mid career pay is around 144k whereas the stem percent is only 2 and impact is 82. Another being where tuition is just 7k with above average intial pay of 62k and mid career pay of 120k.
 
-STEM has positive correlation with everything except impact perentage. There are values which are contradictory. Initial pay 81,000,mid pay 144k,stem percent=2 and impct is 82. 
-
-
-some unis with lower tuition (7k) have above average initial (66k) and mid pay(120k). 
 
 
 ```{r,fig.height=8}
