--- a/index.Rmd
+++ b/index.Rmd
@@ -239,7 +239,7 @@ A matrix scatter plot is a powerful tool for visualising the correlation between
 
 There are also some values which are contradictory to the correlation. These can be found by hovering over the plot as the plot has been made interactive using the plotly package in R. 
 
-One such observation is where the initial pay is 81k, mid career pay is around 144k whereas the stem percent is only 2 and impact is 82. Another being where tuition is just 7k with above average initial pay of 62k and mid career pay of 120k.
+One such observation is where the initial pay is 81k, mid career pay is around 144k whereas the stem percent is only 2% and impact is 82%. Another being where tuition is just $7000 with above average initial pay of 62k and mid career pay of 120k.
 
 ### Universities offering Highest Initial Salary
 
@@ -268,13 +268,17 @@ The highest career growth is observed in Harvard University where the mid career
 
 # Conclusion
 
-The standard of U.S. education is of highly remarkable. Through our study, we saw distribution of tuition fees in the U.S. and concluded that residents and non-residents tend to go to public and prosperous universities with good tuition fees. Furthermore, we witnessed that the US education system provides various grants and scholarships in the case of applicants having a strong profile and a lower income level to enable the student enter to the desired university.
+Before exploring all the datasets at hand in greater depths, we asked ourselves the question, How valuable is the investment in American universities? After profound exploration, thorough analysis and meticulous inspection, we can safely say that we have an answer.
 
-On admission we saw the numerous states across the USA showing great progress in the growth of the student career in terms of their salary potential. Through our study we found that students' growth is mostly above 50 percent. We also saw alumni contributions from the various states around the US. Finally, we've seen the various diverse populace found in the US.
+Firstly we observed that majority of the American population, both non residents and citizens prefer going to public universities for higher education as the tuition fee is comparatively lower for public universities than private or for profit universities. Then we explored how much burden that is the tuition cost a student takes on average across various income groups. We also found out that universities also offer scholarships to eligible students with academic accolades and according to their economic backgrounds. Students with weaker economic backgrounds received more scholarships than those with better economic backgrounds. 
 
-Through the exploration of the dataset, therefore, we infer that, if you study in the U.S., you will mainly enter a public and private university, you will earn various scholarships and grants according to your level of income and profile. Upon completion of your schooling, we saw the breadth of the career growth of the applicant, which showed promising results, and witnessed the U.S. schooling in global diversity while making you more global and providing the right exposure.
+Then we investigated which states in the US offer best career growth opportunities to students by calculating the improvement in their salaries half way into their careers. Almost all the states provided a growth percentage of more than 70% to the students which contributed immensely to us arriving at the answer for our primary research question.
 
-So we get to the point and answer our primary research question, Yes, U.S. education is value-for-money and the investment really is worth it. The returns from these investments are compelling, too.
+We also probed into how students from different states think that they are contributing to make the world a better place and looked at the different ethnic groups which are enrolled in US universities.
+
+We then understood that US is accommodative towards different ethnic groups who want to live the American dream. We then examined how different states accommodate the minority groups in their prestigious universities. We also studied how the most expensive and the most inexpensive colleges admit the minority population. Finally, we scrutinized the correlation between the tuition cost, initial salary offered and the mid-career salary, all of which asserted a positive correlation. This authenticated the worthiness of the heavy investment students have to make in the form of tuition fees.
+
+After diligent and rigorous exploration we can safely say that pursuing a university degree from the US is definitely worth every penny which a student pays for a better future. Nothing is guaranteed in life, but a degree from a university in the US can certainly award a sufficient return on the investment made in the form of tuition fees. After all, who doesn't want to live the American dream. Right?
 
 # References
 
