Making small changes in the conclusion

--- a/index.Rmd
+++ b/index.Rmd
@@ -270,15 +270,15 @@ The highest career growth is observed in Harvard University where the mid career
 
 Before exploring all the datasets at hand in greater depths, we asked ourselves the question, How valuable is the investment in American universities? After profound exploration, thorough analysis and meticulous inspection, we can safely say that we have an answer.
 
-Firstly we observed that majority of the American population, both non residents and citizens prefer going to public universities for higher education as the tuition fee is comparatively lower for public universities than private or for profit universities. Then we explored how much burden that is the tuition cost a student takes on average across various income groups. We also found out that universities also offer scholarships to eligible students with academic accolades and according to their economic backgrounds. Students with weaker economic backgrounds received more scholarships than those with better economic backgrounds. 
+Firstly we observed that majority of the American population, both non residents and citizens enroll in public universities for higher education as the tuition fee is comparatively lower for public universities than private or for profit universities. Also, we noticed that non-residents pay more tuition fee in public universities than citizens of the US. Then we explored how much burden that is the tuition cost a student takes on average across various income groups. We also found out that universities also offer scholarships to eligible students with academic accolades and according to their economic backgrounds. Students with weaker economic backgrounds received more scholarships than those with better economic backgrounds there by reducing the net cost or burden on such students. 
 
 Then we investigated which states in the US offer best career growth opportunities to students by calculating the improvement in their salaries half way into their careers. Almost all the states provided a growth percentage of more than 70% to the students which contributed immensely to us arriving at the answer for our primary research question.
 
-We also probed into how students from different states think that they are contributing to make the world a better place and looked at the different ethnic groups which are enrolled in US universities.
+We also probed into how alumni from different states think that they are contributing to make the world a better place. In most states almost 50% of the alumni think that they contribute towards making the world a better place. Then we looked at the different ethnic groups which are enrolled in US universities.
 
-We then understood that US is accommodative towards different ethnic groups who want to live the American dream. We then examined how different states accommodate the minority groups in their prestigious universities. We also studied how the most expensive and the most inexpensive colleges admit the minority population. Finally, we scrutinized the correlation between the tuition cost, initial salary offered and the mid-career salary, all of which asserted a positive correlation. This authenticated the worthiness of the heavy investment students have to make in the form of tuition fees.
+We then understood that US is accommodative towards different ethnic groups who want to live the American dream. We then examined how different states accommodate the minority groups in their prestigious  universities. We also studied how the most expensive and the most inexpensive colleges admit the multi-cultural population. Finally, we scrutinized the correlation between the tuition cost, initial salary offered and the mid-career salary, all of which asserted a positive correlation. This authenticated the worthiness of the heavy investment students have to make in the form of tuition fees.
 
-After diligent and rigorous exploration we can safely say that pursuing a university degree from the US is definitely worth every penny which a student pays for a better future. Nothing is guaranteed in life, but a degree from a university in the US can certainly award a sufficient return on the investment made in the form of tuition fees. After all, who doesn't want to live the American dream. Right?
+After diligent and rigorous exploration we can safely say that pursuing a university degree from the US is definitely worth every penny which a student pays for a better future. Nothing is guaranteed in life, but a degree from a university in the US can certainly award a sufficient return on the investment made in the form of tuition fees. After all, who doesn't want to live the American dream. Right? 
 
 # References
 
