Making a minor change in the conclusion

--- a/index.Rmd
+++ b/index.Rmd
@@ -276,7 +276,7 @@ Then we investigated which states in the US offer best career growth opportuniti
 
 We also probed into how alumni from different states think that they are contributing to make the world a better place. In most states almost 50% of the alumni think that they contribute towards making the world a better place. Then we looked at the different ethnic groups which are enrolled in US universities.
 
-We then understood that US is accommodative towards different ethnic groups who want to live the American dream. We then examined how different states accommodate the minority groups in their prestigious  universities. We also studied how the most expensive and the most inexpensive colleges admit the multi-cultural population. Finally, we scrutinized the correlation between the tuition cost, initial salary offered and the mid-career salary, all of which asserted a positive correlation. This authenticated the worthiness of the heavy investment students have to make in the form of tuition fees.
+We then understood that US is accommodative towards different ethnic groups who want to live the American dream. We then examined how different states accommodate the minority groups in their prestigious  universities. We also studied how the most expensive and the most inexpensive colleges embrace the multi-cultural population. Finally, we scrutinized the correlation between the tuition cost, initial salary offered and the mid-career salary, all of which asserted a positive correlation. This authenticated the worthiness of the heavy investment students have to make in the form of tuition fees.
 
 After diligent and rigorous exploration we can safely say that pursuing a university degree from the US is definitely worth every penny which a student pays for a better future. Nothing is guaranteed in life, but a degree from a university in the US can certainly award a sufficient return on the investment made in the form of tuition fees. After all, who doesn't want to live the American dream. Right? 
 
